Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116496

icx on windows qvariant_p.h call to customConstructShared is ambiguous

    XMLWordPrintable

Details

    • Bug
    • Resolution: Fixed
    • P2: Important
    • 6.6.0 Beta4, 6.7.0 FF
    • 6.6.0 Beta3
    • Core: Other
    • None
    • Windows
    • bed203a6f (dev), 724f7fb6c (6.6)

    Description

      icx compile on windows of 6.6.0 Beta3 generates the following error.

      In file included from C:\Qt\qt-everywhere-src-6.6.0-beta3\qtbase\src\corelib\kernel\qvariant.cpp:6:
      C:\Qt\qt-everywhere-src-6.6.0-beta3\qtbase\src\corelib\kernel/qvariant_p.h(101,23): error: call to 'customConstructShared' is ambiguous
              data.shared = customConstructShared(sizeof(T), alignof(T), [=](void *where)
      

       

      Work around in qvariant.cpp comment out 

       template <typename F> static QVariant::PrivateShared *
       customConstructShared(size_t size, size_t align, F &&construct)
      

       

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            thiago Thiago Macieira
            rich Richard Fleck
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes